--- a/site/morse.html
+++ b/site/morse.html
@@ -39,6 +39,7 @@
   	<div id='wrap'>
      	<img src='../media/content/2024_morse_letters.jpg' alt='A herring gull wearing an army cap says that most used letters were assigned shorter codes' loading ='lazy'>
        	<a style='width: 39%;height: 9%;top: 41%;left: 60%;' title="Link to dichotomic search table image" href="../media/docs/Morse_code_tree3.png" target="_blank"><span>Dichotomic Search Table, CC BY-SA 3.0 by Aris00</span></a>
+       	<a style='width: 15%;height: 5%;top: 54%;left: 51%;' title="Link to table for decoding received Morse Code" href="../media/docs/morse_decoder.png" target="_blank"><span>Morse Code Receive Decoder Chart, by Gregori, inspired by Dave Nathanson</span></a>
   	</div>
    	<p class='noprint'>Letter table: A = dit dah, B = Dah dit dit dit, C = Dah dit dah dit, D = Dah dit dit, E = Dit, F = Dit dit dah dit, G = Dah dah dit, H = Dit dit dit dit, I = Dit dit, J = Dit dah dah dah, K = Dah dit dah, L = Dit dah dit dit, M = Dah dah, N = Dah dit, O = Dah dah dah, P = Dit dah dah dit, Q = Dah dah dit dah, R = Dit dah dit, S = Dit dit dit, T = Dah, U = Dit dit dah, V = Dit dit dit dah, W = Dit dah dah, X = Dah dit dit dah, Y = Dah dit dah dah, & Z = Dah dah dit dit. Number table: 1 = Dit dah dah dah dah, 2 = Dit dit dah dah dah, 3 = Dit dit dit dah dah, 4 = Dit dit dit dit dah, 5 = Dit dit dit dit dit, 6 = Dah dit dit dit dit, 7 = Dah dah dit dit dit, 8 = Dah dah dah dit dit, 9 = Dah dah dah dah dit, and 0 = Dah dah dah dah dah.</p>
 
@@ -57,7 +58,7 @@
     <p class='noprint'>Learn to recognize them by their sound patterns, not as separate elements. Think in code when reading, spare time practice will commit the melodies to the brain.</p>
 	<h2>Basic Rules for Morse Code</h2>
 	<img src='../media/content/2024_morse_basicrules.jpg' alt='There is a graphic showing the actual timing of the words Rabbit Waves, as well as a drawing of many rabbits running close together, resembling a wave.' loading ='lazy'>
-	<p class='noprint'>Rule 1: When sending Morse Code, these are no capital letters. Rule 2: The duration of a "dit" is the basic unit of time in Morse Code. Rule 3: A "dah" is 3 times the duration of a "dit". Rule 4: A period with no signal acts as a "Space" lasting 1 "dit" long. Rule 5: Each letter of a word is separated by a "Space" that is 3 "dits" long. Rule 6: Each word is separated by a "Space" lasting 7 "dits."</p>
+	<p class='noprint'>Rule 1: When sending Morse Code, these are no capital letters. Rule 2: The duration of a "dit" is the basic unit of time in Morse Code. Rule 3: A "dah" is 3 times the duration of a "dit". Rule 4: A period with no signal acts as a "Space" lasting 1 "dit" long. Rule 5: Each letter of a word is separated by a "Space" that is 3 "dits" long. Rule 6: Each word is separated by a "Space" lasting 7 "dits." Rule 6: A transmission ends with the end signal "AR"(with a top bar over both letters). Run letters with top bars together!</p>
 	<h2>Timing for Morse Code</h2>
 	<img src='../media/content/2024_morse_timing.jpg' loading ='lazy'>
 	<p class='noprint'>Below is a visualization of the actual timing of Morse Code, again, with each symbol lasting 1 "dit." Following is a graphic showing the timing using "Rabbit Waves" as an example. The graphic follows the timing rules outlined in Rules 1-6 outlined above.</p>
