--- a/site/morse_flags.html
+++ b/site/morse_flags.html
@@ -23,8 +23,21 @@
 	<h2>Morse Signaling by Hand Flags or Arms</h2>
 	<img src='../media/content/2024_morse_handflags.jpg' alt='There are images of rabbits holding Oscar flags, and using them to signal morse code. For "dah" a rabbit holds two flags outward horizontally at arms length, for "dit" a rabbit holds two flags up over their head, to signal the separation of dits and dahs a rabbit crosses two flags downward in front of their body, to signal the separation of letters/groups/words the rabbit holds the two flag forward apart from each other, and the last signal consisting of a rabbit waving two flags about its head in circles is used to make a request for repetition(if by the receiving station) or to erase signals(if made by the transmitting station).' loading ='lazy'>
 	<p class='noprint'>Allow for enough time between dots and dashes, and between letters, groups or words.</p>
-	<img src='../media/content/2024_repeat_handflags.jpg' alt='A murrelet at sea on a carrot-hulled catamaran is waving hand flags in a circle to signal to a rabbit on another boat, the murrelet appears to be confused and is requesting for the message to be repeated. The rabbit sees this.' loading ='lazy'>
-	<p class="noprint">"Oh! I'm going to repeat the signals," the rabbit says.</p>
+    <h2>How to start/end:</h2>
+    <img src='../media/content/morse_flags_start.jpg' alt='Rabbit signing the Morse Code hand flag positions for the letter K, and for the number 1' loading ='lazy'>
+    <p class='noprint'>1. Sender signals K1, or...</p>
+    <img src='../media/content/morse_flags_start2.jpg' alt='Rabbits signing the Morse Code hand flag positions for the letter AA AA AA' loading ='lazy'>
+    <p class='noprint'>Signal "AA AA AA"(all groups have bars at the top). Run letters with top bars together. AA AA AA is used when wishing to call a station within visual range without knowing their name. The call is repeated until the other station replies.</p>
+    <img src='../media/content/morse_flags_start3.jpg' alt='Rabbits signing the Morse Code hand flag positions for the letters TTTT, followed by another set for the letters YS1.' loading ='lazy'>
+    <p class='noprint'>2. The receiving station signals "TTTT: to answer the call, and does not stop unless the transmitting station stops their call... or the receiver signals "YS1".</p>
+    <img src='../media/content/morse_flags_start4.jpg' alt='A rabbit signing the Morse Code hand flag positions for the letter T' loading ='lazy'>
+    <p class='noprint'>3. Calling station sends message. The receiving station signals a "T" to acknowledge receipt of each word or group.</p>
+    <img src='../media/content/morse_flags_start5.jpg' alt='Rabbit signing the Morse Code hand flag positions for the letters YU' loading ='lazy'>
+    <p class='noprint'>4. If the calling station wants to send code groups, messages must be preceeded by "YU".</p>
+    <img src='../media/content/morse_flags_start6.jpg' alt='Rabbit signing the Morse Code hand flag positions for the letters AR(AR has a top bar linking the two letters)' loading ='lazy'>
+    <p class='noprint'>5. A transmission ends with the end signal "AR"(with a top bar over both characters).</p>
+    <img src='../media/content/2024_repeat_handflags.jpg' alt='A murrelet at sea on a carrot-hulled catamaran is waving hand flags in a circle to signal to a rabbit on another boat, the murrelet appears to be confused and is requesting for the message to be repeated. The rabbit sees this.' loading ='lazy'>
+    <p class="noprint">"Oh! I'm going to repeat the signals," the rabbit says.</p>
 </main>
 <footer>
     <div id='wrapfooter'>
