--- a/site/aircraft.html
+++ b/site/aircraft.html
@@ -20,8 +20,13 @@
     <h1>Ground to air signaling</h1>
 </header>
 <main>
+      <nav>
+        <ul>
+            <li><a href="https://archive.org/details/fm21_60" target="_blank">FM 21-60</a></li>
+        </ul>
+    </nav>
   <img src='../media/content/2024_aircraft_01.jpg' loading ='lazy'>
-  <p class='noprint'>Air to ground signals. When one needs to communicate with an aircraft from the ground, it is easier to draw one symbol than to spell out an entire sentence.<br>The below symbols are understood by all aircraft pilots.</p>
+  <p class='noprint'>Ground to air signals. When one needs to communicate with an aircraft from the ground, it is easier to draw one symbol than to spell out an entire sentence.<br>The below symbols are understood by all aircraft pilots.</p>
   <img src='../media/content/2024_aircraft_02.jpg' alt='A list of symbols: I, X, II, F, a square, an up arrow, V, K, a triangle, LL, N, Y, a back L with L, and L' loading ='lazy'>
   <p class='noprint'>I : Doctor required (serious injury. X : Unable to proceed (need assistance). II : Medical supplies required. F : Food and water required. Box shape : Map and compass required. Up arrow : Proceeding in this direction. V : Assistance required. K : Indicate direction to proceed. Triangle : Safe to land here. LL : All is well. N : No. Y : Yes. Backward L and L: Don't understand. L : Need fuel and oil.</p>
   <img src='../media/content/2024_aircraft_03.jpg' alt='' loading ='lazy'>
