--- a/site/morse_flags.html
+++ b/site/morse_flags.html
@@ -20,6 +20,11 @@
 	<h1>Morse Flags</h1>
 </header>
 <main>
+    <nav>
+        <ul>
+            <li><a href="https://archive.org/details/pub-102" target="_blank">International Code of Signals, pub-102</a></li>
+        </ul>
+    </nav>
 	<h2>Morse Signaling by Hand Flags or Arms</h2>
 	<img src='../media/content/2024_morse_handflags.jpg' alt='There are images of rabbits holding Oscar flags, and using them to signal morse code. For "dah" a rabbit holds two flags outward horizontally at arms length, for "dit" a rabbit holds two flags up over their head, to signal the separation of dits and dahs a rabbit crosses two flags downward in front of their body, to signal the separation of letters/groups/words the rabbit holds the two flag forward apart from each other, and the last signal consisting of a rabbit waving two flags about its head in circles is used to make a request for repetition(if by the receiving station) or to erase signals(if made by the transmitting station).' loading ='lazy'>
 	<p class='noprint'>Allow for enough time between dots and dashes, and between letters, groups or words.</p>
@@ -51,7 +56,7 @@
 </main>
 <footer>
     <div id='wrapfooter'>
-        <img src='../media/interface/footer.jpg' loading='lazy' title='About| hundredrabbits | © 2024 BY-NC-SA 4.0'>
+        <img src='../media/interface/footer.jpg' loading='lazy' title='About| hundredrabbits | © 2025 BY-NC-SA 4.0'>
         <a class='hundredrabbits' href="https://100r.co" title='Link to 100r.co website' target="_blank"></a>
         <a class='license' href="https://github.com/rekkabell/rabbitwaves" title='Link to Github license page' target="_blank"></a>
         <a class='about' href="about.html" title='Link to about page'></a>
