--- a/site/about.html
+++ b/site/about.html
@@ -34,7 +34,8 @@
 	<h2>Pages</h2>
 	<nav>
 		<ul>
-			<li><a href="aircraft.html">Air to Ground Signals</a></li>
+			<li><a href="emergency_bag.html">Emergency Bag</a></li>
+			<li><a href="aircraft.html">Ground to Air Signals</a></li>
 			<li><a href="morse_code.html">Morse Code</a></li>
 			<li><a href="morse_flags.html">Morse Flags</a></li>
 			<li><a href="flags.html">Flag Semaphore</a></li>
@@ -43,6 +44,7 @@
 		</ul>
 	</nav>
 	<img src='../media/interface/pages.jpg' alt='Pages:' class='title'>
+	<a href="emergency_bag.html"><img src='../media/interface/emergency_bag.jpg' title='Emergency Bag'></a>
 	<a href="aircraft.html"><img src='../media/interface/aircraft.jpg' title='Air to ground signals'></a>
 	<a href="day_shapes.html"><img src='../media/interface/day_shapes.jpg' title='Day shapes'></a>
 	<a href="flags.html"><img src='../media/interface/hand_flag_semaphore.jpg' title='Hand flag semaphore'></a>
