--- a/site/morse.html
+++ b/site/morse.html
@@ -29,6 +29,8 @@
         	<li><a href="https://en.wikipedia.org/wiki/Chinese_telegraph_code" target="_blank">Chinese Telegraph Code</a></li>
         	<li><a href="http://www.itu.int/rec/R-REC-M.1677-1-200910-I/" target="_blank">Morse Code in Other Languages	</a></li>
         	<li><a href="https://www.njstar.com/cms/chinese-commercial-telegraph-code-lookup" target="_blank">Chinese Commercial/Telegraphic Code Lookup</a></li>
+        	<li><a href="../media/zines/communication.png" target="_blank">Zine</a></li>
+        	<li><a href="../media/zines/zineposes_hr.png" target="_blank">Zine folding instructions</a></li>
 		</ul>
   	</nav>
   		<img src='../media/content/2024_morse_intro.jpg' alt='There is an illustration of a rabbit with their body curled into a ball to represent a DIT, and another with their body stretched out horizontally to represent a DAH' loading ='lazy'>
@@ -78,6 +80,18 @@
     	<a style='width: 20%;height: 6%;top: 42%;left: 49%;' title="Chinese Commercial/Telegraphic Code Lookup" href="https://www.njstar.com/cms/chinese-commercial-telegraph-code-lookup" target="_blank"><span>Chinese Commercial/Telegraphic Code Lookup</span></a>
   	</div>
     <p class='noprint'>Morse code was initially designed for latin characters, but have since been adapted to languages like Russian & Arabic. An example shows the Prosign WAIT in Russian, Arabic and in Morse Code(dit dah dit dit dit).<br>Languages with more characters, like Chinese, weren't as easy to transpose to Morse.<br>Instead of dots & dashes being assigned to characters directly, they assigned them to numbers instead. Characters were each assigned a 4-digit code ranging from 0000-9999, arranged & numbered in dictionary order according to their radicals & strokes.<br>An example shows the Morse numbers assigned to the Chinese characters used to spell out "wait"(等待). 等 was assigned 4583, and 待 was assigned 1769.<br>Because Chinese doesn't use non-digit characters, it is possible to simplify the morse code for digits(numbers can be quite long).</p>
+<h2>Zine</h2>
+		<div id='wrap'>
+  			<img src='../media/content/zine_download.jpg' alt='' loading ='lazy'>
+    	<a style='width: 18%;height: 75%;top: 26%;left: 40%;' title="Zine file" href="../media/zines/communication.png" target="_blank"><span>Download Zine</span></a>
+  	</div>
+    <p class='noprint'>Download the zine version of this page.</p>
+	<img src="../media/content/zine_howto.jpg" loading="lazy"></a>
+	<p class='noprint'>How to fold a zine.</p>
+	<div id='wrap'>
+		<a style='width: 20%;height: 75%;top: 18%;left: 40%;' title="Zine folding instructions" href="../media/zines/zineposes_hr.png" target="_blank"><span>Non-gif version of instructions</span></a>
+		<img src="../media/zines/foldzine.gif" loading="lazy"></a>
+	</div>
 </main>
 <footer>
     <div id='wrapfooter'>
