--- a/site/morse_flags.html
+++ b/site/morse_flags.html
@@ -23,6 +23,8 @@
     <nav>
         <ul>
             <li><a href="https://archive.org/details/pub-102" target="_blank">International Code of Signals, pub-102</a></li>
+            <li><a href="../media/zines/communication.png" target="_blank">Zine</a></li>
+            <li><a href="../media/zines/zineposes_hr.png" target="_blank">Zine folding instructions</a></li>
         </ul>
     </nav>
 	<h2>Morse Signaling by Hand Flags or Arms</h2>
@@ -53,6 +55,18 @@
     <p class='noprint'>5. A transmission ends with the end signal "AR"(with a top bar over both characters).</p>
     <img src='../media/content/2024_repeat_handflags.jpg' alt='A murrelet at sea on a carrot-hulled catamaran is waving hand flags in a circle to signal to a rabbit on another boat, the murrelet appears to be confused and is requesting for the message to be repeated. The rabbit sees this.' loading ='lazy'>
     <p class="noprint">"Oh! I'm going to repeat the signals," the rabbit says.</p>
+<h2>Zine</h2>
+        <div id='wrap'>
+            <img src='../media/content/zine_download.jpg' alt='' loading ='lazy'>
+        <a style='width: 18%;height: 75%;top: 26%;left: 40%;' title="Zine file" href="../media/zines/communication.png" target="_blank"><span>Download Zine</span></a>
+    </div>
+    <p class='noprint'>Download the zine version of this page.</p>
+    <img src="../media/content/zine_howto.jpg" loading="lazy"></a>
+    <p class='noprint'>How to fold a zine.</p>
+    <div id='wrap'>
+        <a style='width: 20%;height: 75%;top: 18%;left: 40%;' title="Zine folding instructions" href="../media/zines/zineposes_hr.png" target="_blank"><span>Non-gif version of instructions</span></a>
+        <img src="../media/zines/foldzine.gif" loading="lazy"></a>
+    </div>
 </main>
 <footer>
     <div id='wrapfooter'>
