--- a/site/flags_maritime.html
+++ b/site/flags_maritime.html
@@ -25,6 +25,8 @@
 			<li><a href="day_shapes.html">Day Shapes</a></li>
 			<li><a href="../media/docs/ics_pub102bk.pdf" target="_blank">International Code of Signals PDF</a></li>
 			<li><a href="flags.html">Flag Semaphore</a></li>
+        	<li><a href="../media/zines/communication.png" target="_blank">Zine</a></li>
+        	<li><a href="../media/zines/zineposes_hr.png" target="_blank">Zine folding instructions</a></li>
 		</ul>
 	</nav>
 	<img src='../media/content/2024_signaling_intro.jpg' alt='A small spectacled guillemot says the word good in Japanese, there is also a small illustratin of two tiny character on separate mountain tops trying to speak to each other from afar, but they dont understand each other' loading='lazy'>
@@ -59,6 +61,18 @@
 		<img src='../media/content/2024_handflag_intro.jpg' alt='a rabbit at sea aboard a turnip-shaped boat waving a pair of oscar hand flags to initiate a conversation with another sailor by semaphore flags' loading='lazy'>
 		<p class='noprint'>It is also possible to send signals by flag semaphore.</p>
 		<a style='width: 25%;height: 13%;top: 25%;left: 21%' title="Hand flag semaphore page" href="flags.html"><span>Flag Semaphore</span></a>
+	</div>
+<h2>Zine</h2>
+		<div id='wrap'>
+  			<img src='../media/content/zine_download.jpg' alt='' loading ='lazy'>
+    	<a style='width: 18%;height: 75%;top: 26%;left: 40%;' title="Zine file" href="../media/zines/communication.png" target="_blank"><span>Download Zine</span></a>
+  	</div>
+    <p class='noprint'>Download the zine version of this page.</p>
+	<img src="../media/content/zine_howto.jpg" loading="lazy"></a>
+	<p class='noprint'>How to fold a zine.</p>
+	<div id='wrap'>
+		<a style='width: 20%;height: 75%;top: 18%;left: 40%;' title="Zine folding instructions" href="../media/zines/zineposes_hr.png" target="_blank"><span>Non-gif version of instructions</span></a>
+		<img src="../media/zines/foldzine.gif" loading="lazy"></a>
 	</div>
 </main>
 <footer>
