--- a/site/flags_maritime.html
+++ b/site/flags_maritime.html
@@ -60,7 +60,7 @@
 	<div id='wrap'>
 		<img src='../media/content/2024_handflag_intro.jpg' alt='a rabbit at sea aboard a turnip-shaped boat waving a pair of oscar hand flags to initiate a conversation with another sailor by semaphore flags' loading='lazy'>
 		<p class='noprint'>It is also possible to send signals by flag semaphore.</p>
-		<a style='width: 25%;height: 13%;top: 25%;left: 21%' title="Hand flag semaphore page" href="flags.html"><span>Flag Semaphore</span></a>
+		<a style='width: 25%;height: 13%;top: 32%;left: 19%;' title="Hand flag semaphore page" href="flags.html"><span>Flag Semaphore</span></a>
 	</div>
 <h2>Zine</h2>
 		<div id='wrap'>
