--- a/index.html
+++ b/index.html
@@ -16,14 +16,20 @@
 </head>
 <body>
 <header>
-	<div id='wrap'>
-		<img src='media/content/rabbit_main.jpg' alt='Sailing in root vegetable-shaped sailboats on the ocean, the sailors are talking to each other via a series of flags. A turnip-shaped boat has an anthropomorphic rabbit sailor aboard, and a human, the other is too far to make out. The sailboat that is far away is signaling with the Quebec, Romeo and One flags. The turnip-shaped boat is flying the answering pennant.'>
-		<a style='width: 11%;height: 13%;top: 37%;left: 32%' title='Link to a page about signaling with flags' href="site/flags_maritime.html"><span>International Maritime Signal Flags</span></a>
-	</div>
-	<p class='noprint'>Signaling using flags.</p>
-	<img src='media/interface/title.png' width='50%' alt='Rabbit Waves'>
+    <nav>
+    <ul>
+      <li><a href="flags_maritime.html">International Maritime Signal Flags</a></li>
+      <li><a href="emergency_bag.html" target="_blank">Emergency Bag</a></li>
+    </ul>
+  </nav>
 </header>
 <main>
+  <div id='wrap'>
+    <img src='media/content/rabbit_main.jpg' alt='Sailing in root vegetable-shaped sailboats on the ocean, the sailors are talking to each other via a series of flags. A turnip-shaped boat has an anthropomorphic rabbit sailor aboard, and a human, the other is too far to make out. The sailboat that is far away is signaling with the Quebec, Romeo and One flags. The turnip-shaped boat is flying the answering pennant.'>
+    <a style='width: 6%;height: 20%;top: 28%;left: 19%;' title='Link to a page about signaling with flags' href="site/flags_maritime.html"><span>International Maritime Signal Flags</span></a>
+    <a style='width: 7%;height: 13%;top: 66%;left: 50%;' title='Link to a page about emergency bags' href="site/emergency_bag.html"><span>Emergency Bag</span></a>
+  </div>
+  <img src='media/interface/title.png' width='50%' alt='Rabbit Waves'>
 </main>
 <footer>
     <div id='wrapfooter'>
