--- a/site/first_aid_kit.html
+++ b/site/first_aid_kit.html
@@ -25,17 +25,20 @@
     <img src='../media/content/first_aid_02.jpg' alt=''>
     <p class='noprint'>It may not be possible for EMS personnel to come to assist you in an emergency. You may need to contact a doctor and request advice on providing care, even if it is outside of your training. Document the doctor’s orders carefully.</p>
     <img src='../media/content/first_aid_06.jpg' alt=''>
-    <p class='noprint'>You should prepare the following information and present it to the doctor:<br>1) Routine information about the location.<br>2) Routine information about the person.<br>3) Details of the illness/injury.<br>4) Care rendered and the person’s response to that care.</p>
+    <p class='noprint'>You should prepare the following information and present it to the doctor:<br>1) Routine information about the person.<br>2) Details of the illness/injury.<br>3) Care rendered and the person’s response to that care.</p>
     <img src='../media/content/first_aid_03.jpg' alt=''>
     <p class='noprint'>Clearly mark the first-aid kit with a red cross<, and make sure those sharing the space with you know where it is. Keep a list inside of the items you use, and be sure to top off the kit every year or so.</p>
+    <h2>Basic First-Aid Kit</h2>
     <img src='../media/content/first_aid_kit.jpg' alt='drawings of examples of items that basic first aid kits ought to contain: Sterile gauze pads, Medical tape, Roller bandages, Adhesive bandages, Scissors, Tweezers, Safety pins, Instant ice packs, Surgical or examination gloves, Flashlight, Antiseptic wipes, Pencil (and sharpie) and pad, Emergency blanket, Eye patch, Thermometer, and a first aid manual.' loading="lazy">
     <p class='noprint'>Sterile gauze pads (dressings) in small and large squares to place over wounds, Medical tape, Roller and triangular bandages to hold dressings in place or to make an arm sling, Adhesive bandages in assorted sizes, Scissors, Tweezers, Safety pins, Instant ice packs, Disposable non-latex gloves(such as surgical or examination gloves), Flashlight(with extra batteries in a separate bag), Antiseptic wipes or soap, Pencil (and sharpie) and pad, Emergency blanket, Eye patch, Thermometer, and a first aid manual.</p>
+    <h2>Basic Medicine Kit</h2>
     <img src='../media/content/first_aid_04.jpg' alt=''>
     <p class='noprint'>Always read about a medicine before using it. If administering medicine to another person, ask about their allergies, and past medical history, last oral intake etc. Some medicines can cause severe allergic reactions, or may interact with other medicine.</p>
     <img src='../media/content/first_aid_05.jpg' alt=''>
     <p class='noprint'>Never administer anything to anyone without their consent.</p>
     <img src='../media/content/medicine_kit.jpg' alt='drawings of examples of items that basic medicine kits ought to contain: Ibuprofen, Aspirin, Antihistamines, Seasickness meds, Ear drops, Eye wash, Bug spray, Hand sanitizer, Topical anesthetic, Azithromycin, Acetaminophen, Sunscreen (SPF 30), Aloe vera gel with lidocaine, Bacitracin (Topical ointment), Hydrogen peroxide, and anti-diarrheal.' loading="lazy">
     <p class='noprint'>Ibuprofen, Aspirin, Antihistamines, Seasickness meds, Ear drops, Eye wash, Bug spray, Hand sanitizer, Topical anesthetic, Azithromycin, Acetaminophen, Sunscreen (SPF 30), Aloe vera gel with lidocaine, Bacitracin (Topical ointment), Hydrogen peroxide, and anti-diarrheal.</p>
+    <h2>Advanced add-ons to a medical kit</h2>
     <img src='../media/content/addon_kit.jpg' alt='drawings of useful add ons for an advanced first aid kit: Hot water bottle, Staple gun, Epinephrine, Tourniquet, Multitool, Compression bandage, Reinforced sterile skin closures, CPR pocket mask, Povidone iodine surgical scrubs, Sterile sutures thread with needle, and Emergency dental kit' loading="lazy">
     <p class='noprint'>Hot water bottle, Staple gun, Epinephrine, Tourniquet, Multitool, Compression bandage, Reinforced sterile skin closures, CPR pocket mask, Povidone iodine surgical scrubs, Sterile sutures thread with needle, and Emergency dental kit.</p>
 </main>
