--- a/site/about.html
+++ b/site/about.html
@@ -34,6 +34,7 @@
 	<h2>Pages</h2>
 	<nav>
 		<ul>
+			<li><a href="first_aid_kit.html">First-Aid Kit</a></li>
 			<li><a href="emergency_bag.html">Emergency Bag</a></li>
 			<li><a href="aircraft.html">Ground to Air Signals</a></li>
 			<li><a href="morse_code.html">Morse Code</a></li>
@@ -44,6 +45,7 @@
 		</ul>
 	</nav>
 	<img src='../media/interface/pages.jpg' alt='Pages:' class='title'>
+	<a href="first_aid_kit.html"><img src='../media/interface/first_aid.jpg' title='First aid'></a>
 	<a href="emergency_bag.html"><img src='../media/interface/emergency_bag.jpg' title='Emergency Bag'></a>
 	<a href="aircraft.html"><img src='../media/interface/aircraft.jpg' title='Air to ground signals'></a>
 	<a href="day_shapes.html"><img src='../media/interface/day_shapes.jpg' title='Day shapes'></a>
