--- a/site/about.html
+++ b/site/about.html
@@ -34,25 +34,25 @@
 	<h2>Pages</h2>
 	<nav>
 		<ul>
-			<li><a href="first_aid_kit.html">First-Aid Kit</a></li>
-			<li><a href="emergency_bag.html">Emergency Bag</a></li>
-			<li><a href="aircraft.html">Ground to Air Signals</a></li>
-			<li><a href="morse_code.html">Morse Code</a></li>
-			<li><a href="morse_flags.html">Morse Flags</a></li>
-			<li><a href="flags.html">Flag Semaphore</a></li>
-			<li><a href="flags_maritime.html">International Maritime Signal Flags</a></li>
 			<li><a href="day_shapes.html">Day Shapes</a></li>
+			<li><a href="emergency_bag.html">Emergency Bag</a></li>
+			<li><a href="first_aid_kit.html">First-Aid Kit</a></li>
+			<li><a href="flags.html">Flag Semaphore</a></li>
+			<li><a href="aircraft.html">Ground to Air Signals</a></li>
+			<li><a href="flags_maritime.html">International Maritime Signal Flags</a></li>
+			<li><a href="morse_code.html">Morse Code</a></li>
+			<li><a href="morse_flags.html">Morse Code With Flags</a></li>
 		</ul>
 	</nav>
 	<img src='../media/interface/pages.jpg' alt='Pages:' class='title'>
-	<a href="first_aid_kit.html"><img src='../media/interface/first_aid.jpg' title='First aid'></a>
-	<a href="emergency_bag.html"><img src='../media/interface/emergency_bag.jpg' title='Emergency Bag'></a>
-	<a href="aircraft.html"><img src='../media/interface/aircraft.jpg' title='Air to ground signals'></a>
 	<a href="day_shapes.html"><img src='../media/interface/day_shapes.jpg' title='Day shapes'></a>
+	<a href="emergency_bag.html"><img src='../media/interface/emergency_bag.jpg' title='Emergency Bag'></a>
+	<a href="first_aid_kit.html"><img src='../media/interface/first_aid.jpg' title='First aid'></a>
+	<a href="aircraft.html"><img src='../media/interface/aircraft.jpg' title='ground to air signals'></a>
 	<a href="flags.html"><img src='../media/interface/hand_flag_semaphore.jpg' title='Hand flag semaphore'></a>
-	<a href="flags_maritime.html"><img src='../media/interface/international_maritime_signal_flags.jpg' title='International Maritime Signal Flags'></a>
 	<a href="morse.html"><img src='../media/interface/morse_code.jpg' title='Morse Code'></a>
 	<a href="morse_flags.html"><img src='../media/interface/morse_flags.jpg' title='Morse Code with flags'></a>
+	<a href="flags_maritime.html"><img src='../media/interface/international_maritime_signal_flags.jpg' title='International Maritime Signal Flags'></a>
 	<img src='../media/interface/support.jpg' alt='Support:' class='title'>
 	<div id='wrapsupport'>
 		<img src='../media/interface/support_options.jpg' loading='lazy' title='Support options:'>
