--- a/site/about.html
+++ b/site/about.html
@@ -20,7 +20,7 @@
 	<h1>About</h1>
 </header>
 <main>
-	<img src='../media/interface/links.jpg' alt='Links are indicated by words bordered with dotted lines'>
+	<img src='../media/interface/links.jpg' alt='Links are indicated by words, or images, bordered with dotted lines'>
 	<h2>Support</h2>
 	<nav>
 		<ul>
