--- a/site/first_aid_kit.html
+++ b/site/first_aid_kit.html
@@ -39,8 +39,8 @@
     <img src='../media/content/medicine_kit.jpg' alt='drawings of examples of items that basic medicine kits ought to contain: Ibuprofen, Aspirin, Antihistamines, Seasickness meds, Ear drops, Eye wash, Bug spray, Hand sanitizer, Topical anesthetic, Azithromycin, Acetaminophen, Sunscreen (SPF 30), Aloe vera gel with lidocaine, Bacitracin (Topical ointment), Hydrogen peroxide, and anti-diarrheal.' loading="lazy">
     <p class='noprint'>Ibuprofen, Aspirin, Antihistamines, Seasickness meds, Ear drops, Eye wash, Bug spray, Hand sanitizer, Topical anesthetic, Azithromycin, Acetaminophen, Sunscreen (SPF 30), Aloe vera gel with lidocaine, Bacitracin (Topical ointment), Hydrogen peroxide, and anti-diarrheal.</p>
     <h2>Advanced add-ons to a medical kit</h2>
-    <img src='../media/content/addon_kit.jpg' alt='drawings of useful add ons for an advanced first aid kit: Hot water bottle, Staple gun, Epinephrine, Tourniquet, Multitool, Compression bandage, Reinforced sterile skin closures, CPR pocket mask, Povidone iodine surgical scrubs, Sterile sutures thread with needle, and Emergency dental kit' loading="lazy">
-    <p class='noprint'>Hot water bottle, Staple gun, Epinephrine, Tourniquet, Multitool, Compression bandage, Reinforced sterile skin closures, CPR pocket mask, Povidone iodine surgical scrubs, Sterile sutures thread with needle, and Emergency dental kit.</p>
+    <img src='../media/content/addon_kit.jpg' alt='drawings of useful add ons for an advanced first aid kit: Hot water bottle, Staple gun, Epinephrine, Tourniquet, Multitool, Compression bandage, Reinforced sterile skin closures, CPR pocket mask, Povidone iodine surgical scrubs, Sterile sutures thread with needle, an emergency(israeli) bandage, and an emergency dental kit' loading="lazy">
+    <p class='noprint'>Hot water bottle, Staple gun, Epinephrine, Tourniquet, Multitool, Compression bandage, Reinforced sterile skin closures, CPR pocket mask, Povidone iodine surgical scrubs, Sterile sutures thread with needle, an emergency(israeli) bandage, and an emergency dental kit.</p>
 </main>
 <footer>
     <div id='wrapfooter'>
