--- a/site/first_aid_kit.html
+++ b/site/first_aid_kit.html
@@ -22,10 +22,12 @@
 <main>
     <img src='../media/content/first_aid_01.jpg' alt=''>
     <p class='noprint'>Learn everything you can about fisrt-aid. Knowing what to do in the event of severe bleeding, choking, or severe allergic reaction could save a life.</p>
+    <img src='../media/content/study_firstaid.jpg' alt='a rabbit sitting on the ground and studying a book about first aid, other books are laying around'>
     <img src='../media/content/first_aid_02.jpg' alt=''>
     <p class='noprint'>It may not be possible for EMS personnel to come to assist you in an emergency. You may need to contact a doctor and request advice on providing care, even if it is outside of your training. Document the doctor’s orders carefully.</p>
     <img src='../media/content/first_aid_06.jpg' alt=''>
     <p class='noprint'>You should prepare the following information and present it to the doctor:<br>1) Routine information about the person.<br>2) Details of the illness/injury.<br>3) Care rendered and the person’s response to that care.</p>
+    <img src='../media/content/first_aid_sm.jpg' alt='a red first-aid kit bag, with a white cross marked on its front'>
     <img src='../media/content/first_aid_03.jpg' alt=''>
     <p class='noprint'>Clearly mark the first-aid kit with a red cross<, and make sure those sharing the space with you know where it is. Keep a list inside of the items you use, and be sure to top off the kit every year or so.</p>
     <h2>Basic First-Aid Kit</h2>
