--- a/site/first_aid_kit.html
+++ b/site/first_aid_kit.html
@@ -25,8 +25,10 @@
     <img src='../media/content/study_firstaid.jpg' alt='a rabbit sitting on the ground and studying a book about first aid, other books are laying around'>
     <img src='../media/content/first_aid_02.jpg' alt=''>
     <p class='noprint'>It may not be possible for EMS personnel to come to assist you in an emergency. You may need to contact a doctor and request advice on providing care, even if it is outside of your training. Document the doctor’s orders carefully.</p>
-    <img src='../media/content/first_aid_06.jpg' alt=''>
-    <p class='noprint'>You should prepare the following information and present it to the doctor:<br>1) Routine information about the person.<br>2) Details of the illness/injury.<br>3) Care rendered and the person’s response to that care.</p>
+    <!-- <img src='../media/content/first_aid_06.jpg' alt=''>
+    <p class='noprint'>You should prepare the following information and present it to the doctor:<br>1) Routine information about the person.<br>2) Details of the illness/injury.<br>3) Care rendered and the person’s response to that care.</p> -->
+     <img src='../media/content/first_aid_sample.jpg' alt=''>
+     <p class='noprint'>The word SAMPLE is a useful acrostic mnemonic to remember what to ask a patient prior to treating them:<br>Signs and symptoms (What hurts? How do you feel?)<br>Allergies (Do you have known allergies or allergic reactions? What happens? Was there a recent exposure?)<br>Medications (What medications are you taking? Are the medications over the counter, or prescription? What are the medications for? When did you last take them? Where do you keep your medications?)<br>Pertinent past medical history (Has this happened before? Are you currently under care for anything by a doctor? If a woman, are you pregnant?)<br>Last intake and output (When did you last eat/drink? Are you hungry, cold, or tired? When did you last urinate/defecate? Were they normal?)<br>Events leading up to the injury/illness (What caused the incident? When did it happen? Explain, in chronological order, how it happened)</p>
     <img src='../media/content/first_aid_sm.jpg' alt='a red first-aid kit bag, with a white cross marked on its front'>
     <img src='../media/content/first_aid_03.jpg' alt=''>
     <p class='noprint'>Clearly mark the first-aid kit with a red cross<, and make sure those sharing the space with you know where it is. Keep a list inside of the items you use, and be sure to top off the kit every year or so.</p>
