--- a/site/triangular_bandage.html
+++ b/site/triangular_bandage.html
@@ -23,7 +23,7 @@
     <img src='../media/content/triangular_01.jpg' alt=''>
     <p class='noprint'>Triangular bandages are used to make slings and to make broad bandages to keep splints in place.</p>
     <img src='../media/content/triangular_02.jpg' alt='illustrations of a rabbit with a broken arm, with several steps showing how to wrap a triangular bandage into a sling to support the injury. The rabbit goes from being upset, to happy with a good sling'>
-    <p class='noprint'>Pass around the back of the neck towards the injured side. Make a reef knot(keep knot above the clavicle). Keep corner away from the elbow. Expose all fingers. Twist end, and tuck.</p>
+    <p class='noprint'>Pass around the back of the neck towards the injured side. Make a reef knot(keep knot above the clavicle). Keep corner away from the elbow. Expose all fingers. Twist end, and tuck(or secure with safety pin).</p>
     <img src='../media/content/triangular_03.jpg' alt='4 images showing how to tie a reef knot'>
     <p class='noprint'>How to tie a reef knot (square knot).</p>
     <img src='../media/content/triangular_04.jpg' alt='6 steps showing how to fold a triangular bandage into a narrow band, by folding the triangle onto itself several times'>
