--- a/site/about.html
+++ b/site/about.html
@@ -42,6 +42,7 @@
 			<li><a href="flags_maritime.html">International Maritime Signal Flags</a></li>
 			<li><a href="morse_code.html">Morse Code</a></li>
 			<li><a href="morse_flags.html">Morse Code With Flags</a></li>
+			<li><a href="triangular_bandage.html">Triangular Bandage</a></li>
 		</ul>
 	</nav>
 	<img src='../media/interface/pages.jpg' alt='Pages:' class='title'>
@@ -53,6 +54,7 @@
 	<a href="morse.html"><img src='../media/interface/morse_code.jpg' title='Morse Code'></a>
 	<a href="morse_flags.html"><img src='../media/interface/morse_flags.jpg' title='Morse Code with flags'></a>
 	<a href="flags_maritime.html"><img src='../media/interface/international_maritime_signal_flags.jpg' title='International Maritime Signal Flags'></a>
+	<a href="triangular_bandage.html"><img src='../media/interface/triangular_bandage.jpg' title='Triangular Bandage'></a>
 	<img src='../media/interface/support.jpg' alt='Support:' class='title'>
 	<div id='wrapsupport'>
 		<img src='../media/interface/support_options.jpg' loading='lazy' title='Support options:'>
