--- a/site/triangular_bandage.html
+++ b/site/triangular_bandage.html
@@ -21,11 +21,23 @@
 </header>
 <main>
     <img src='../media/content/triangular_01.jpg' alt=''>
-    <p class='noprint'>Triangular bandages are used to make slings and to make broad bandages to keep splints in place.</p>
+    <p class='noprint'>Triangular bandages are used to make slings and to make broad bandages to keep splints in place.<br>There are two ways to tur a triangular bandage into a sling:</p>
+    <h2>Arm Sling</h2>
+    <img src='../media/content/triangular_06.jpg' alt=''>
+    <p class='noprint'>An arm sling is horizontal (or slightly raised), it is used to treat upper arm injuries, wrist injuries, rib fractures, etc.</p>
     <img src='../media/content/triangular_02.jpg' alt='illustrations of a rabbit with a broken arm, with several steps showing how to wrap a triangular bandage into a sling to support the injury. The rabbit goes from being upset, to happy with a good sling'>
-    <p class='noprint'>Pass around the back of the neck towards the injured side. Make a reef knot(keep knot above the clavicle). Keep corner away from the elbow. Expose all fingers. Twist end, and tuck(or secure with safety pin).</p>
+    <p class='noprint'>Pass around the back of the neck towards the injured side. Make a reef knot(keep knot above the clavicle). Keep corner away from the elbow. Twist end, and tuck(or secure with safety pin).</p>
+    <h2>Elevation Sling</h2>
+    <img src='../media/content/triangular_07.jpg' alt=''>
+    <p class='noprint'>An elevation sling helps to control hand and arm bleeding, and helps to reduce swelling.</p>
+    <img src='../media/content/triangular_05.jpg' alt='a rabbit has a swollen hand which is progressively elevated using a triangular bandage into a sling.'>
+    <p class='noprint'>Reef knot & tuck ends around knot.</p>
+    <h2>How to tie a reef knot</h2>
     <img src='../media/content/triangular_03.jpg' alt='4 images showing how to tie a reef knot'>
     <p class='noprint'>How to tie a reef knot (square knot).</p>
+    <img src='../media/content/triangular_08.jpg' alt=''>
+    <p class='noprint'>Triangular bandages are used to make slings and to make broad bandages to keep splints in place.</p>
+    <h2>How to fold a triangular bandage into a broad or narrow bandage</h2>
     <img src='../media/content/triangular_04.jpg' alt='6 steps showing how to fold a triangular bandage into a narrow band, by folding the triangle onto itself several times'>
     <p class='noprint'>How to fold a triangular bandage into a broad or narrow bandage:</p>
 </main>
