--- a/site/first_aid_kit.html
+++ b/site/first_aid_kit.html
@@ -35,7 +35,7 @@
     <h2>Basic First-Aid Kit</h2>
     <div id='wrap'>
         <img src='../media/content/first_aid_kit.jpg' alt='drawings of examples of items that basic first aid kits ought to contain: Sterile gauze pads, Medical tape, Roller bandages, Adhesive bandages, Scissors, Tweezers, Safety pins, Instant ice packs, Surgical or examination gloves, Flashlight, Antiseptic wipes, Pencil (and sharpie) and pad, Emergency blanket, Eye patch, Thermometer, and a first aid manual.' loading="lazy">
-        <a style='width: 18%;height: 15%;top: 10%;left: 61%;' href="../site/triangular_bandage.html" target="_blank"><span>Triangular Bandage</span></a>
+        <a style='width: 18%;height: 15%;top: 10%;left: 61%;' href="../site/triangular_bandage.html"><span>Triangular Bandage</span></a>
     </div>
     <p class='noprint'>Sterile gauze pads (dressings) in small and large squares to place over wounds, Medical tape, Roller and triangular bandages to hold dressings in place or to make an arm sling, Adhesive bandages in assorted sizes, Scissors, Tweezers, Safety pins, Instant ice packs, Disposable non-latex gloves(such as surgical or examination gloves), Flashlight(with extra batteries in a separate bag), Antiseptic wipes or soap, Pencil (and sharpie) and pad, Emergency blanket, Eye patch, Thermometer, and a first aid manual.</p>
     <h2>Basic Medicine Kit</h2>
