--- a/site/triangular_bandage.html
+++ b/site/triangular_bandage.html
@@ -5,7 +5,7 @@
   <meta charset='utf-8'>
   <meta name='author' content='Rek Bell'>
   <meta name='description' content='Rabbit Waves'/>
-  <meta name='keywords' content='worldbuilding, travel, sailing'/>
+  <meta name='keywords' content='worldbuilding, travel, sailing, preparedness, analog communication'/>
   <meta name='license' content='name=BY-NC-SA(4.0), url=https://creativecommons.org/licenses/by-nc-sa/4.0/'/>
   <meta name='thumbnail' content='https://rabbitwaves/media/services/thumbnail.jpg' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
@@ -26,7 +26,7 @@
     <img src='../media/content/triangular_06.jpg' alt=''>
     <p class='noprint'>An arm sling is horizontal (or slightly raised), it is used to treat upper arm injuries, wrist injuries, rib fractures, etc.</p>
     <img src='../media/content/triangular_02.jpg' alt='illustrations of a rabbit with a broken arm, with several steps showing how to wrap a triangular bandage into a sling to support the injury. The rabbit goes from being upset, to happy with a good sling'>
-    <p class='noprint'>Pass around the back of the neck towards the injured side. Make a reef knot(keep knot above the clavicle). Keep corner away from the elbow. Twist end, and tuck(or secure with safety pin).</p>
+    <p class='noprint'>Pass around the back of the neck towards the injured side. Make a reef knot(keep knot above the clavicle). Keep corner away from the elbow. Twist end of corner, and tuck(or secure with a safety pin).</p>
     <h2>Elevation Sling</h2>
     <img src='../media/content/triangular_07.jpg' alt=''>
     <p class='noprint'>An elevation sling helps to control hand and arm bleeding, and helps to reduce swelling.</p>
@@ -39,7 +39,6 @@
     <p class='noprint'>Triangular bandages are used to make slings and to make broad bandages to keep splints in place.</p>
     <h2>How to fold a triangular bandage into a broad or narrow bandage</h2>
     <img src='../media/content/triangular_04.jpg' alt='6 steps showing how to fold a triangular bandage into a narrow band, by folding the triangle onto itself several times'>
-    <p class='noprint'>How to fold a triangular bandage into a broad or narrow bandage:</p>
 </main>
 <footer>
     <div id='wrapfooter'>
