--- a/site/first_aid_kit.html
+++ b/site/first_aid_kit.html
@@ -32,6 +32,11 @@
     <img src='../media/content/first_aid_sm.jpg' alt='a red first-aid kit bag, with a white cross marked on its front'>
     <img src='../media/content/first_aid_03.jpg' alt=''>
     <p class='noprint'>Clearly mark the first-aid kit with a red cross<, and make sure those sharing the space with you know where it is. Keep a list inside of the items you use, and be sure to top off the kit every year or so.</p>
+    <div id='wrap'>
+        <img src='../media/content/first_aid_07.jpg' alt='' loading="lazy">
+        <a style='width: 14%;height: 14%;top: 74%;left: 20%;' href="../media/docs/first_aid.txt"><span>First aid .text list</span></a>
+    </div>
+        <p class='noprint'>By choosing to build a first-aid and med kit yourself you'll save money, while having items you are more likely to use.<br>What you need deends on your situation:<br>How far are you from help?<br>Do you have weight constraints?<br>What sorts of injuries or ailments are you likely to treat?<br>What is your budget? Skill level?<br>Make a plan, do research.<br>View the .txt file version of the items listed on this page, and of their intended usage.</p>
     <h2>Basic First-Aid Kit</h2>
     <div id='wrap'>
         <img src='../media/content/first_aid_kit.jpg' alt='drawings of examples of items that basic first aid kits ought to contain: Sterile gauze pads, Medical tape, Roller bandages, Adhesive bandages, Scissors, Tweezers, Safety pins, Instant ice packs, Surgical or examination gloves, Flashlight, Antiseptic wipes, Pencil (and sharpie) and pad, Emergency blanket, Eye patch, Thermometer, a first aid manual, burn dressings(with gel), hydration tablets/powder, surgical tape, petrolatum gauze, and hot water bottle' loading="lazy">
