--- a/site/first_aid_kit.html
+++ b/site/first_aid_kit.html
@@ -20,8 +20,14 @@
     <h1>First-aid kit</h1>
 </header>
 <main>
+    <nav>
+        <ul>
+            <li><a href="../site/triangular_bandage.html" target="_blank">Triangular Bandage</a></li>
+            <li><a href="../media/docs/first_aid.txt" target="_blank">First-Aid .txt file</a></li>
+        </ul>
+    </nav>
     <img src='../media/content/first_aid_01.jpg' alt=''>
-    <p class='noprint'>Learn everything you can about fisrt-aid. Knowing what to do in the event of severe bleeding, choking, or severe allergic reaction could save a life.</p>
+    <p class='noprint'>Learn everything you can about first-aid. Knowing what to do in the event of severe bleeding, choking, or severe allergic reaction could save a life.</p>
     <img src='../media/content/study_firstaid.jpg' alt='a rabbit sitting on the ground and studying a book about first aid, other books are laying around'>
     <img src='../media/content/first_aid_02.jpg' alt=''>
     <p class='noprint'>It may not be possible for EMS personnel to come to assist you in an emergency. You may need to contact a doctor and request advice on providing care, even if it is outside of your training. Document the doctor’s orders carefully.</p>
@@ -34,7 +40,7 @@
     <p class='noprint'>Clearly mark the first-aid kit with a red cross<, and make sure those sharing the space with you know where it is. Keep a list inside of the items you use, and be sure to top off the kit every year or so.</p>
     <div id='wrap'>
         <img src='../media/content/first_aid_07.jpg' alt='' loading="lazy">
-        <a style='width: 14%;height: 14%;top: 74%;left: 20%;' href="../media/docs/first_aid.txt"><span>First aid .text list</span></a>
+        <a style='width: 14%;height: 14%;top: 74%;left: 20%;' href="../media/docs/first_aid.txt"><span>First-aid .text file</span></a>
     </div>
         <p class='noprint'>By choosing to build a first-aid and med kit yourself you'll save money, while having items you are more likely to use.<br>What you need deends on your situation:<br>How far are you from help?<br>Do you have weight constraints?<br>What sorts of injuries or ailments are you likely to treat?<br>What is your budget? Skill level?<br>Make a plan, do research.<br>View the .txt file version of the items listed on this page, and of their intended usage.</p>
     <h2>Basic First-Aid Kit</h2>
