--- a/site/triangular_bandage.html
+++ b/site/triangular_bandage.html
@@ -32,6 +32,7 @@
     <p class='noprint'>An elevation sling helps to control hand and arm bleeding, and helps to reduce swelling.</p>
     <img src='../media/content/triangular_05.jpg' alt='a rabbit has a swollen hand which is progressively elevated using a triangular bandage into a sling.'>
     <p class='noprint'>Reef knot & tuck ends around knot.</p>
+    <img src='../media/content/triangular.gif' alt='a rabbit has a swollen hand which is progressively elevated using a triangular bandage into a sling as an animation.'>
     <h2>How to tie a reef knot</h2>
     <img src='../media/content/triangular_03.jpg' alt='4 images showing how to tie a reef knot'>
     <p class='noprint'>How to tie a reef knot (square knot).</p>
