--- a/site/triangular_bandage.html
+++ b/site/triangular_bandage.html
@@ -36,6 +36,7 @@
     <h2>How to tie a reef knot</h2>
     <img src='../media/content/triangular_03.jpg' alt='4 images showing how to tie a reef knot'>
     <p class='noprint'>How to tie a reef knot (square knot).</p>
+    <img src='../media/content/reefknot.gif' alt='an animation showing how to tie a reef knot'>
     <img src='../media/content/triangular_08.jpg' alt=''>
     <p class='noprint'>Triangular bandages are used to make slings and to make broad bandages to keep splints in place.</p>
     <h2>How to fold a triangular bandage into a broad or narrow bandage</h2>
