--- a/site/emergency_bag.html
+++ b/site/emergency_bag.html
@@ -42,7 +42,7 @@
     <img src='../media/content/emergency_bag_07.jpg' loading ='lazy'>
     <p class='noprint'>Some items, like a portable cooking stove, or a bucket toilet, usually shared by a group of people, ought to be carried in additional bags by those in the group who can take on more weight safely.</p>
     <img src='../media/content/emergency_bag_03.jpg' alt='two images, one showing mountains on land, the other a sailboat on the water' loading ='lazy'>
-    <p class='noprint'>A good bag design: On land: <br>1) Keeps your hands free. 2) Distributes the weight in the bag well (on the hips). 3) Is waterproof. On the water:<br> 1) Waterproof 2) Buoyant 3) Has a lanyard for lying off 4) Bright colored (orange, red or yellow) 5) Allows for ample storage(especially if sailing offshore(<br>Pack the items away, and place the bag near an entrance so that it is possible to grab it quickly when leaving.</p>
+    <p class='noprint'>A good bag design: On land: <br>1) Keeps your hands free. 2) Distributes the weight in the bag well (on the hips). 3) Is waterproof. On the water:<br> 1) Waterproof 2) Buoyant 3) Has a lanyard for tying off 4) Brightly colored (orange, red or yellow) 5) Allows for ample storage(especially if sailing offshore(<br>Pack the items away, and place the bag near an entrance so that it is possible to grab it quickly when leaving.</p>
     <img src='../media/content/emergency_bag_06.jpg' alt='a drawing showing a passport, family photos, money and medicine' loading ='lazy'>
     <p>Store critical items on your person rather than in the bag (identity documents, money, prescription medicine, etc), in case the bag goes missing, or is stolen.</p>
     <h2>Mutual Aid</h2>
